Add jwks token validation and proper doc for setup
